
# This is a CMake example for Python

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/)

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(rbtree.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(rbtree.i PROPERTIES SWIG_FLAGS "-includeall")

swig_add_library(rbtree_python TYPE SHARED
    LANGUAGE python
    SOURCES rbtree.i
    OUTPUT_DIR ${CMAKE_SOURCE_DIR}/_builds/cpp_wrappers/python
)

target_link_libraries(rbtree_python LINK_PUBLIC rbtreelib)
